force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>Saves information related to the comments of the movies made by users.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-OMDb-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>