force-app/main/default/objects/Review__c/fields/MovieId__c.field-meta.xml
<CustomField>
    <fullName>MovieId__c</fullName>
    <description>Id from OMDb API</description>
    <externalId>true</externalId>
    <label>Movie Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>